  * NSIS-based installer for the Windows binary distribution (based on 
    work by NEBOR Regis.
  * gettimeofday() now works. Things that broke because they depended on it
    should now work. I have to enable port I/O in order to for this to work,
    but I plan to disable it in the future. If you compile a new vmlinux
    Make sure that CONFIG_X86_TSC is enabled in your .config file.

* Version 0.5.4 AKA "Focal Segmental Glomerulosclerosis" (%gs/%fs) release
  * Fixed an issue with i686-optimized pthread and the preservation of 
    %gs and %fs. The crashes that were caused by the i686 Gentoo image 
    should now disappear. 
    WINE would also work now ;)
  * cobd: Fixed accessing large block devices (1GB >). cobd0 was passing 
    wrong information to userspace.
  * conet: Statistics are now gathered (patch by Pat Erley)
  * Tuned the time conversion between Windows and Linux. The machine is 
    now initialized with the right date, not 4 days backwards.
  * Applied a configuration parsing fix (patch by Ballard Jonathan)
  * Some improvements of the switch code. We now preserve more registers,
    (MMX/SSE/SSE2/FP), and coLinux now has its own GDT. These changes 
    should assure stability on more systems and processors.
    This fix also appears to solve the problem where processes were stuck
    on nanosleep() calls.
  * conet-pcap: pcap-based daemon (contributed by Alejandro R. Sedeno). 
  * Network configuration is now handled in the coLinux configuration XML.
    For backward compatibility, add:
    <network index="0" name="TAP" type="tap"></network>
	
    If you want to use pcap (i.e, bridged Ethernet), add:
    <network index="0" name="XXXX" type="bridged"></network>
    (Where XXXX is a substring of your network adapter's name)
      
    Optional attributes: mac="XX:XX:XX:XX:XX:XX" - specifies the MAC
    address of the interface in the Linux side. Recommended on bridged
    networking setups, where more than one Windows machine will be 