@@ -11,17 +11,24 @@ LOCAL_OBJS = \
 	console.o \
 	debug.o \
 	messages.o \
+	version.o \
 
 LOCAL_OBJS := $(addprefix $(BUILD_PATH)/,$(LOCAL_OBJS))
 
 $(LOCAL_OBJS) : %.o : %.c
 	$(TOOL_KERNEL_CC)
 
+$(BUILD_PATH)/version.h : $(BUILD_PATH)/version.py $(BUILD_PATH)/../VERSION
+	python $(word 1,$^) $(word 2,$^) $@
+
+$(BUILD_PATH)/version.o : $(BUILD_PATH)/version.h
+
 $(BUILD_PATH)/common.o : $(LOCAL_OBJS)
 	$(TOOL_LD_RELOC)
 
 CLEAN_FILES := $(CLEAN_FILES) \
-	$(LOCAL_OBJS) $(BUILD_PATH)/common.o
+	$(LOCAL_OBJS) $(BUILD_PATH)/common.o \
+	$(BUILD_PATH)/version.h
 
 #-----------------------------------------------------------------
 # include $(call BUILD_SUBDIRS, )
